--- a/FiloArtsPlus/templates/clients.html
+++ b/FiloArtsPlus/templates/clients.html
@@ -104,7 +104,7 @@
 {#      <p>© <span>Copyright</span> <strong class="px-1 sitename">FiloArts+</strong> <span>All Rights Reserved</span></p>#}
       <div class="credits">
 
-        Designed by <a href="https://stemiotsoftwares.onrender.com/" style="color: black" class="credits1"><b>StemiotInnovations</b></a>
+        Powered by <a href="https://stemiotsoftwares-r1vu.onrender.com/" style="color: black" class="credits1"><b>Stemiot Softwares</b></a>
       </div>
     </div>
 
