--- a/FiloArtsPlus/templates/index.html
+++ b/FiloArtsPlus/templates/index.html
@@ -518,7 +518,7 @@
           <a href="{% url 'admin:index' %}">.</a>.</p>
       <div class="credits">
 
-        Designed by <a href="https://stemiotsoftwares.onrender.com/" style="color: black" class="credits1"><b><u>StemiotInnovations</u></b></a>
+        Powered by <a href="https://stemiotsoftwares-r1vu.onrender.com/" style="color: black" class="credits1"><b>Stemiot Softwares</b></a>
       </div>
     </div>
 
