--- a/FiloArtsPlus/templates/pay.html
+++ b/FiloArtsPlus/templates/pay.html
@@ -56,6 +56,7 @@
       </nav>
 
     </div>
+     
 
  </header>
 
@@ -67,12 +68,13 @@
 
  <form action="/stk_push/" method="POST" >
     {% csrf_token %}
+     
 
     <input class="form-control w-25" name="phone" type="number" placeholder="Phone Number"  value="+254" required><br><br>
 
     <input class="form-control w-25" name="amount" type="number" required placeholder="Amount"><br><br>
 
-    <input class="button-form" type="submit" value="Pay Now">
+    <input style="background-color:#FFC720FF; border:none;color:white;border-radius:8px;     " class="btn-success" type="submit" value="Pay Now">
 
     </form>
 
@@ -88,7 +90,7 @@
 {#      <p>© <span>Copyright</span> <strong class="px-1 sitename">FiloArts+</strong> <span>All Rights Reserved</span></p>#}
       <div class="credits">
 
-        Designed by <a href="https://stemiotsoftwares.onrender.com/" style="color: black" class="credits1"><b>StemiotInnovations</b></a>
+        Powered by <a href="https://stemiotsoftwares-r1vu.onrender.com/" style="color: black" class="credits1"><b>Stemiot Softwares</b></a>
       </div>
     </div>
 
